--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="biografia.html">Biografias</a></li>
                 <li><a href="#rocket-process">Processo de Criação</a></li>
-                <li><a href="#banner">Página Principal</a></li>
+                <li><a href="index.html">Página Principal</a></li>
                 <li> <a href="contato.html">Contato</a></li>
                 <li> <a href="videodoprojeto.html">Video do nosso projeto</a></li>
             </ul>
@@ -31,7 +31,7 @@
     
         <section id="banner">
             <div class="banner">
-                <img src="banner.jpg" alt="Banner">
+                <img src="img/dragao chines.jpg" alt="Banner">
             </div>
         </section>
     
