--- a/videodoprojeto.html
+++ b/videodoprojeto.html
@@ -21,10 +21,11 @@
 
     <nav>
         <ul>
+            <li><a href="biografia.html">Biografias</a></li>
+            <li><a href="#rocket-process">Processo de Criação</a></li>
             <li><a href="index.html">Página Principal</a></li>
-            <li><a href="biographies.html">Biografias</a></li>
-            <li><a href="rocket-process.html">Processo de Criação</a></li>
-            <li><a href="contact.html">Contato</a></li>
+            <li> <a href="contato.html">Contato</a></li>
+            <li> <a href="videodoprojeto.html">Video do nosso projeto</a></li>
         </ul>
     </nav>
 
