--- a/biografia.html
+++ b/biografia.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo&display=swap">
     <title>Biografia</title>
 </head>
 <body>
@@ -21,12 +23,24 @@
     <section id="biographies">
         <h2>Biografias dos Integrantes</h2>
         <div class="member">
-            <img src="integrante1.jpg" alt="Integrante 1">
-            <p>Nome: Integrante 1<br>Função: Engenheiro de Propulsão</p>
+            <img src="integrante1.jpg" alt="">
+            <p>Nome: Evellyn Feliciano<br>Função: Engenheiro de Propulsão</p>
         </div>
         <div class="member">
-            <img src="integrante2.jpg" alt="Integrante 2">
-            <p>Nome: Integrante 2<br>Função: Engenheiro de Controle</p>
+            <img src="integrante2.jpg" alt="">
+            <p>Nome: Gabriel A.<br>Função: Engenheiro de Controle</p>
+        </div>
+        <div class="member">
+            <img src="integrante1.jpg" alt="">
+            <p>Nome: Gabriel C.<br>Função: Engenheiro de Propulsão</p>
+        </div>
+        <div class="member">
+            <img src="integrante2.jpg" alt="">
+            <p>Nome: Guilherme N.<br>Função: Engenheiro de Controle</p>
+        </div>
+        <div class="member">
+            <img src="integrante2.jpg" alt="">
+            <p>Nome: Iago Menezes<br>Função: Engenheiro de Controle</p>
         </div>
         <!-- Adicione mais divs de membro conforme necessário -->
     </section>
