--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contato</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo&display=swap">
 </head>
 <body>
     <nav>
