--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>SUMMUS</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="contato.html">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo&display=swap">
+
 </head>
 <body>
     <!DOCTYPE html>
@@ -31,15 +34,15 @@
     
         <section id="banner">
             <div class="banner">
-                <img src="img/dragao chines.jpg" alt="Banner">
+                <img src="img/dragao chinessemfundo.png" alt="Banner">
             </div>
         </section>
     
         <section id="project-description">
             <h2>Descrição do Projeto</h2>
-            <p>Este projeto de foguete tem como objetivo desenvolver um veículo espacial...</p>
+            <p>Desenvolvido por alunos do curso de Tecnologia da Informação (T.I) da Etec MCM, nosso protótipo de foguete é uma fusão impressionante de tecnologia e exploração espacial. Com ênfase na integração de sistemas, incorporamos sensores inteligentes, sistemas de controle e telemetria avançada para garantir um lançamento seguro e controlado, ao mesmo tempo em que coletamos dados valiosos. Com uma estrutura aerodinâmica e materiais otimizados, alcançamos eficiência e estabilidade. Algoritmos de controle avançados e soluções de software customizadas permitiram um lançamento suave e preciso. Este projeto demonstra nossa capacidade de inovar, colaborar e superar desafios, refletindo nossa paixão pela exploração espacial e tecnologia.</p>
             <p>Para mais detalhes sobre o projeto, acesse nosso repositório no GitHub:</p>
-            <a href="https://github.com/seugithub/nome-do-projeto" target="_blank">GitHub do Projeto</a>
+            <a href="https://github.com/SummusCelestial/Summus" target="_blank">GitHub do Projeto</a>
         </section>
 
         <section id="rocket-process">
@@ -53,8 +56,11 @@
             <p>Trabalhamos com uma variedade de clientes em indústrias como...</p>
             <ul>
                 <li>Empresa A</li>
+                <img src="" alt="">
                 <li>Empresa B</li>
+                <img src="" alt="">
                 <li>Empresa C</li>
+                <img src="" alt="">
                 <!-- Adicione mais empresas conforme necessário -->
             </ul>
         </section>
