--- a/contato.html
+++ b/contato.html
@@ -18,12 +18,42 @@
         </ul>
     </nav>
 
-    <section id="contact-info">
-        <h2>Informações de Contato</h2>
-        <p>Siga-nos no <a href="https://www.instagram.com/projetofoguete/" target="_blank">Instagram</a> para as últimas atualizações:</p>
-        <p>Email: <a href="mailto:contato@projetofoguete.com">contato@projetofoguete.com</a></p>
+    <section id="equipe" class="team-section">
+        <h2>Equipe</h2>
+        <div class="team-member">
+            <a href="https://www.instagram.com/eburimm/">
+                <img src="img/instalogo.png" alt="Membro 1">
+            </a>
+            <p>Evellyn Feliciano</p>
+        </div>
+        <div class="team-member">
+            <a href="https://www.instagram.com/child.ofthekorn/">
+                <img src="img/instalogo.png" alt="Membro 1">
+            </a>
+            <p>Gabriel Araujo</p>
+        </div>
+        <div class="team-member">
+            <a href="https://www.instagram.com/gabrielcd_08/">
+                <img src="img/instalogo.png" alt="Membro 1">
+            </a>
+            <p>Gabriel Caspirro</p>
+        </div>
+        <div class="team-member">
+            <a href="https://www.instagram.com/g_nakamura08/">
+                <img src="img/instalogo.png" alt="Membro 1">
+            </a>
+            <p>Guilherme Nakamura</p>
+        </div>
+        <div class="team-member">
+            <a href="https://www.instagram.com/menez.iago/">
+                <img src="img/instalogo.png" alt="Membro 1">
+            </a>
+            <p>Iago Menezes</p>
+        </div>
+        <!-- Repita para outros membros -->
     </section>
 
+    <!-- ...resto do código... -->
     <section id="suggestions">
         <h2>Sugestões e Comentários</h2>
         <form action="#" method="post">
