--- a/videodoprojeto.html
+++ b/videodoprojeto.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo&display=swap">
-</head>
 <body>
     
 </body>
@@ -32,7 +31,7 @@
     <section id="video">
         <h2>Vídeo do Projeto</h2>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/SE2LMkmwdCA" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" src="img/video.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 </body>
