--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
     <link rel="stylesheet" href="contato.html">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo&display=swap">
+    <link rel="icon" href="img/logo sem fundo.png" type="image/x-icon">
 
 </head>
 <body>
     <!DOCTYPE html>
     <html>
     <head>
-        <title>Projeto de Foguete - Grupo</title>
+        <title>SUMMUS CELESTIAL</title>
+
+        <div class="logo">
+            <img src="img/logocomfundo.png" alt="Logo do Site">
+        </div>
     </head>
     <body>
         <header>
-            <h1>Projeto de Foguete - Grupo</h1>
+            <h1>SUMMUS CELESTIAL</h1>
         </header>
     
         <nav>
@@ -42,27 +47,58 @@
             <h2>Descrição do Projeto</h2>
             <p>Desenvolvido por alunos do curso de Tecnologia da Informação (T.I) da Etec MCM, nosso protótipo de foguete é uma fusão impressionante de tecnologia e exploração espacial. Com ênfase na integração de sistemas, incorporamos sensores inteligentes, sistemas de controle e telemetria avançada para garantir um lançamento seguro e controlado, ao mesmo tempo em que coletamos dados valiosos. Com uma estrutura aerodinâmica e materiais otimizados, alcançamos eficiência e estabilidade. Algoritmos de controle avançados e soluções de software customizadas permitiram um lançamento suave e preciso. Este projeto demonstra nossa capacidade de inovar, colaborar e superar desafios, refletindo nossa paixão pela exploração espacial e tecnologia.</p>
             <p>Para mais detalhes sobre o projeto, acesse nosso repositório no GitHub:</p>
-            <a href="https://github.com/SummusCelestial/Summus" target="_blank">GitHub do Projeto</a>
-        </section>
-
-        <section id="rocket-process">
-            <h2>Processo de Criação do Foguete</h2>
-            <p>O nosso processo de criação do foguete envolve...</p>
+            <a class="partner-button" href="https://github.com/SummusCelestial/Summus" target="_blank">GitHub do Projeto</a>
         </section>
 
 
-        <section id="clients">
-            <h2>Nossos Clientes</h2>
-            <p>Trabalhamos com uma variedade de clientes em indústrias como...</p>
-            <ul>
-                <li>Empresa A</li>
-                <img src="" alt="">
-                <li>Empresa B</li>
-                <img src="" alt="">
-                <li>Empresa C</li>
-                <img src="" alt="">
-                <!-- Adicione mais empresas conforme necessário -->
-            </ul>
+        <section id="processo" class="process-section">
+            <h2>Processo de Criação</h2>
+            <div class="process-step">
+                <img src="img/passo1.jpg" alt="Passo 1">
+
+                <img src="img/passo2.jpg" alt="Passo 2">
+
+                <img src="img/passo3.jpg" alt="Passo 3">
+
+                <img src="img/paso4.jpg" alt="Passo 4">
+
+                <img src="img/passo5.jpg" alt="Passo 5">
+
+                <img src="img/passo6.jpg" alt="Passo 6">
+            </div>
+        </section>
+
+
+        <section id="parceiros" class="partners-section">
+            <h2>Nossos Clientes (feitos por IA)</h2>
+            <div class="partner">
+                <img src="img/p1.jpg" alt="Empresa 1">
+                <P>pessoa 1</P>
+
+            </div>
+            <div class="partner">
+                <img src="img/p2.jpg" alt="Empresa 2">
+                <P>pessoa 2</P>
+            </div>
+            <div class="partner">
+                <img src="img/p3.jpg" alt="Empresa 2">
+                <P>pessoa 3</P>
+            </div>
+            <div class="partner">
+                <img src="img/p4.jpg" alt="Empresa 2">
+                <P>pessoa 4</P>
+            </div>
+            <div class="partner">
+                <img src="img/p5.jpg" alt="Empresa 2">
+                <P>pessoa 5</P>
+            </div>
+            <div class="partner">
+                <img src="img/p6.jpg" alt="Empresa 2">
+                <P>pessoa 6</P>
+            </div>
+            <h3>Site usado para as imagens:</h3>
+            <a class="partner-button" href="https://thispersondoesnotexist.com">Visitar Site</a>
+            <!-- Repita para outras empresas parceiras -->
         </section>
     </body>
     </html>
